--- a/app/src/styles/NavBar.css
+++ b/app/src/styles/NavBar.css
@@ -1,6 +1,6 @@
 .navbar {
-  position: fixed;
-  bottom: calc(8px + env(safe-area-inset-bottom));
+  position: absolute;
+  bottom: 0;
   left: 16px;
   right: 16px;
   display: flex;
